--- a/app/components/Home/styles.css
+++ b/app/components/Home/styles.css
@@ -1,66 +1,46 @@
-* {
-  box-sizing: border-box;
+.searchForm {
+  padding: 20px;
+  background: #EEEEEE;
+  border-bottom: 1px solid #DDDDDD;
 }
 
-.question {
-  margin: 40px 0 20px;
-  text-align: center;
-  color: #616161;
-  font-size: 26px;
-}
-
-.choices {
-  display: flex;
-  flex-direction: row;
-  margin: 0 auto;
-  width: 980px;
-}
-
-.choice {
-  margin: 20px;
-  width: 300px;
-  height: 300px;
-}
-
-.choiceLink {
-  display: table-cell;
-  vertical-align: middle;
+.searchString {
   font-family: 'Raleway', sans-serif;
-  font-weight: 400;
-  height: 300px;
-  width: 300px;
-  background : #BA68C8;
-  color: #ffffff;
-  border: 0;
-  font-size: 28px;
-  outline: none;
-  padding: 10px;
-  text-decoration: none;
-  text-align: center;
+  font-size: 22px;
+  width: 100%;
+  height: 45px;
+  padding: 0 10px;
+  outline: none
 }
 
-.choiceLink:hover {
-  background: #AB47BC;
+.resultListContainer {
 }
 
-.choiceLink span {
+.resultList {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.resultItem {
+  font-size: 22px;
+  padding: 0px;
+  border-bottom: 1px solid #EFEFEF;
+}
+
+.resultItem a {
   display: block;
-  font-size: 18px;
+  color: #000000;
+  text-decoration: none;
+  padding: 20px;
 }
 
-@media (max-width: 980px) {
-  .choices {
-    flex-direction: column;
-    width: 440px;
-  }
+.resultItem a:hover {
+  background: #EEEEEE;
+}
 
-  .choice {
-    height: 150px;
-    width: 400px;
-  }
-
-  .choiceLink {
-    height: 150px;
-    width: 400px;
-  }
+.loading {
+  font-size: 28px;
+  padding: 100px 0;
+  text-align: center;
 }
