--- a/app/components/Organization/styles.css
+++ b/app/components/Organization/styles.css
@@ -10,3 +10,14 @@
   padding-bottom: 10px;
   border-bottom: 1px solid #DDDDDD;
 }
+
+.loading {
+  font-size: 28px;
+  padding: 100px 0;
+  text-align: center;
+}
+
+.fourofour {
+  font-size: 404px;
+  text-align: center;
+}
