--- a/app/components/Home/styles.css
+++ b/app/components/Home/styles.css
@@ -44,3 +44,33 @@
   padding: 100px 0;
   text-align: center;
 }
+
+.pagination {
+  padding: 60px;
+  text-align: center;
+}
+
+.page {
+  margin: 5px;
+  background: #BA68C8;
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  text-align: center;
+  color: #FFFFFF;
+  line-height: 30px;
+  cursor: pointer;
+}
+
+.active {
+  background: #DDDDDD;
+  color: #616161;
+}
+
+.page:hover {
+  background: #AB47BC;
+}
+
+.active:hover {
+  background: #DDDDDD;
+}
