--- a/app/components/Home/styles.css
+++ b/app/components/Home/styles.css
@@ -62,7 +62,7 @@
   cursor: pointer;
 }
 
-.active {
+.page.active {
   background: #DDDDDD;
   color: #616161;
 }
@@ -71,6 +71,49 @@
   background: #AB47BC;
 }
 
-.active:hover {
+.page.active:hover {
   background: #DDDDDD;
+}
+
+.tags {
+  text-align: right;
+  width: 20%;
+}
+
+.searchForm .tags {
+  text-align: left;
+  padding: 20px 0 0;
+  width: 100%;
+}
+
+.searchForm .tags span {
+  cursor: pointer;
+}
+
+.searchForm .tags span:hover,
+.searchForm .tags span.active {
+  background: #AAAAAA;
+  color: #FFFFFF;
+}
+
+.tags span {
+  margin: 3px;
+  padding: 6px 0;
+  font-size: 16px;
+  background-color: rgba(27,31,35,0.05);
+  border-radius: 6px;
+  color: #616161;
+}
+
+.tags span::before, .tags span::after {
+  content: '\00a0\00a0';
+}
+
+.resultItemName {
+  width: 80%;
+}
+
+.resultItemBody {
+  display: flex;
+  flex-direction: row;
 }
