Add tags on organization page, minor fixes

--- a/app/components/Home/styles.css
+++ b/app/components/Home/styles.css
@@ -97,7 +97,7 @@
 }
 
 .tags span {
-  margin: 3px;
+  margin: 4px;
   padding: 6px 0;
   font-size: 16px;
   background-color: rgba(27,31,35,0.05);
@@ -116,4 +116,30 @@
 .resultItemBody {
   display: flex;
   flex-direction: row;
+}
+
+@media (max-width: 1550px) {
+  .tags { width: 30%; }
+  .resultItemName { width: 70% }
+}
+
+@media (max-width: 1000px) {
+  .resultItemBody {
+    display: block;
+  }
+
+  .tags, .resultItemName {
+    width: 100%;
+  }
+
+  .resultItemBody .tags {
+    margin-top: 15px;
+    text-align: left;
+  }
+}
+
+.orgTags {
+  composes: tags;
+  margin: 0 0 35px;
+  text-align: left;
 }
