--- a/app/components/Organization/styles.css
+++ b/app/components/Organization/styles.css
@@ -1,6 +1,7 @@
 .container {
+  max-width: 1500px;
   padding: 40px;
-  margin: 0;
+  margin: 0 auto;
 }
 
 .name {
@@ -20,4 +21,12 @@
 .fourofour {
   font-size: 404px;
   text-align: center;
+}
+
+.contact a {
+  color: #0366d6;
+}
+
+.contact a:hover {
+  text-decoration: underline;
 }
