--- a/app/styles.css
+++ b/app/styles.css
@@ -24,7 +24,7 @@ a {
   font-size: 12px;
   line-height: 14px;
   text-transform: uppercase;
-  background-color: #C62828;
+  background-color: #B71C1C;
   font-weight: 600;
   border-radius: 6px;
   color: #FFFFFF;
