--- a/app/components/Organization/styles.css
+++ b/app/components/Organization/styles.css
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   max-width: 1500px;
   padding: 40px;
   margin: 0 auto;
@@ -11,6 +12,27 @@
   padding-bottom: 10px;
   border-bottom: 1px solid #DDDDDD;
 }
+
+.editLink {
+  display: block;
+  position: absolute;
+  top: 30px;
+  right: 50px;
+
+  width: 135px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+
+  background: #2196F3;
+  color: #FFFFFF;
+  border-radius: 5px;
+}
+
+.editLink:hover {
+  background: #1976D2;
+}
+
 
 .loading {
   font-size: 28px;
