Add ngo administration members

--- a/app/components/Organization/styles.css
+++ b/app/components/Organization/styles.css
@@ -52,3 +52,15 @@
 .contact a:hover {
   text-decoration: underline;
 }
+
+.positions {
+
+}
+
+.adminName {
+
+}
+
+.adminPosition {
+  font-size: 14px;
+}
