--- a/app/components/Home/styles.css
+++ b/app/components/Home/styles.css
@@ -1,52 +1,38 @@
-.resultListContainer,
-.tags,
-.searchInputs {
+.layoutElements {
   margin: 0 auto;
   max-width: 1200px;
 }
 
-
-
-.searchForm {
-  padding: 30px;
-  background: #EEEEEE;
+.filtersContainer {
+  padding: 25px 30px;
   border-bottom: 1px solid #DDDDDD;
+  background: #EEEEEE;
+  min-height: 143px;
 }
 
-.searchInputs {
+.filters {
+  composes: layoutElements;
+}
+
+.filtersLayout {
   display: flex;
   flex-direction: row;
+  margin: 0 0 15px;
 }
 
-.searchString {
-  font-family: 'Raleway', sans-serif;
-  font-size: 22px;
+.searchContainer {
   width: 70%;
-  height: 45px;
-  padding: 0 10px;
-  outline: none;
 }
 
-.searchCategory {
-  margin-left: 5px;
+.categoriesContainer {
   width: 30%;
-  background: #FFFFFF;
-  border: 1px solid #DDDDDD;
+  padding-left: 5px;
 }
 
-.searchCategory select {
-  width: 100%;
-  height: 100%;
-  border: 0;
-  background: transparent;
-  border-radius: 0;
-  outline: none;
-  font-size: 22px;
-  font-family: 'Raleway', sans-serif;
-  color: #888;
-}
+
 
 .resultListContainer {
+  composes: layoutElements;
 }
 
 .resultList {
@@ -79,28 +65,6 @@
 }
 
 
-
-.tags {
-  text-align: right;
-  width: 30%;
-}
-
-.searchForm .tags {
-  text-align: left;
-  padding: 15px 0 0;
-  width: 100%;
-}
-
-.searchForm .tags span {
-  cursor: pointer;
-}
-
-.searchForm .tags span:hover,
-.searchForm .tags span.active {
-  background: #AAAAAA;
-  color: #FFFFFF;
-}
-
 .tags span {
   margin: 4px;
   padding: 6px 0;
@@ -122,7 +86,6 @@
   display: flex;
   flex-direction: row;
 }
-
 
 @media (max-width: 1000px) {
   .resultItemBody {
