Refactor header and footer

--- a/app/components/Header/styles.css
+++ b/app/components/Header/styles.css
@@ -4,37 +4,24 @@
   color: #ffffff;
 }
 
-.header h1 {
+.text {
   margin: 0;
   padding: 20px;
+
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 40px;
   line-height: 50px;
 }
 
-.footer {
-  padding: 40px;
-  text-align: center;
-}
-
-.footer a {
-  color: #0366d6;
-}
-
-.footer a:hover {
-  text-decoration: underline;
-}
-
 @media (max-width: 980px) {
-  .header h1 {
+  .text {
     font-size: 26px;
   }
 }
 
 @media (max-width: 500px) {
-  .header h1 {
+  .text {
     font-size: 18px;
   }
 }
-
