--- a/app/styles.css
+++ b/app/styles.css
@@ -15,28 +15,8 @@ a {
   color: inherit;
 }
 
-.inactive {
-  display: inline-block;
-  width: 95px;
-  height: 23px;
-  margin: 0;
-  padding: 4px 0;
-  font-size: 12px;
-  line-height: 14px;
-  text-transform: uppercase;
-  background-color: #B71C1C;
-  font-weight: 600;
-  border-radius: 6px;
-  color: #FFFFFF;
-  transform: translate(0, -10px);
-}
-
-.inactive::before, .inactive::after {
-  content: '\00a0\00a0';
-}
-
 .inactiveHeader {
-  composes: inactive;
+  composes: badge from './components/Badge/styles.css';
   transform: translate(0, -20px);
   width: 123px;
   height: 28px;
