Refactor edit page

--- a/app/components/Edit/styles.css
+++ b/app/components/Edit/styles.css
@@ -1,59 +1,55 @@
 .container {
-  position: relative;
-  max-width: 800px;
   padding: 40px;
   margin: 0 auto;
+  max-width: 800px;
 }
 
-.saveLink {
-  display: block;
-  margin: 0 auto;
-
-  width: 140px;
+.formElements {
+  width: 100%;
   height: 50px;
-  line-height: 50px;
-  text-align: center;
 
-  background: #43A047;
-  color: #FFFFFF;
-  border-radius: 5px;
-}
+  margin: 10px auto;
+  padding: 10px;
 
-.saveLink:hover {
-  background: #2E7D32;
+  border: 1px solid #DDDDDD;
+  color: #414141;
+
+  font-size: 21px;
+  outline: none;
 }
 
 .input {
-  width: 100%;
-  height: 50px;
-  font-size: 28px;
-  margin: 10px auto;
-  color: #616161;
+  composes: formElements;
 }
 
 .purpose {
-  width: 100%;
+  composes: formElements;
+
   height: 400px;
-  resize: none;
+  margin-bottom: 0;
+
+  line-height: 24px;
   font-size: 18px;
-  line-height: 28px;
+
+  resize: none;
 }
 
-.input,
-.purpose {
-  border: 1px solid #DDDDDD;
-  outline: none;
-  padding: 10px;
-}
+.submit {
+  display: block;
+  margin: 5px auto;
 
+  width: 140px;
+  height: 50px;
 
-.loading {
-  font-size: 28px;
-  padding: 100px 0;
+  border-radius: 5px;
+  background: #43A047;
+  color: #FFFFFF;
+
+  line-height: 50px;
   text-align: center;
+  font-size: 18px;
 }
 
-.fourofour {
-  font-size: 404px;
-  text-align: center;
+.submit:hover {
+  background: #2E7D32;
 }
